; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/powernv/extr_pci-ioda.c_pnv_ioda_free_pe.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/powernv/extr_pci-ioda.c_pnv_ioda_free_pe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnv_ioda_pe = type { i32, i32, i32, %struct.pnv_phb* }
%struct.pnv_phb = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pnv_ioda_pe*)* @pnv_ioda_free_pe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pnv_ioda_free_pe(%struct.pnv_ioda_pe* %0) #0 {
  %2 = alloca %struct.pnv_ioda_pe*, align 8
  %3 = alloca %struct.pnv_phb*, align 8
  %4 = alloca i32, align 4
  store %struct.pnv_ioda_pe* %0, %struct.pnv_ioda_pe** %2, align 8
  %5 = load %struct.pnv_ioda_pe*, %struct.pnv_ioda_pe** %2, align 8
  %6 = getelementptr inbounds %struct.pnv_ioda_pe, %struct.pnv_ioda_pe* %5, i32 0, i32 3
  %7 = load %struct.pnv_phb*, %struct.pnv_phb** %6, align 8
  store %struct.pnv_phb* %7, %struct.pnv_phb** %3, align 8
  %8 = load %struct.pnv_ioda_pe*, %struct.pnv_ioda_pe** %2, align 8
  %9 = getelementptr inbounds %struct.pnv_ioda_pe, %struct.pnv_ioda_pe* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* %4, align 4
  %11 = load %struct.pnv_ioda_pe*, %struct.pnv_ioda_pe** %2, align 8
  %12 = getelementptr inbounds %struct.pnv_ioda_pe, %struct.pnv_ioda_pe* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @WARN_ON(i32 %13)
  %15 = load %struct.pnv_ioda_pe*, %struct.pnv_ioda_pe** %2, align 8
  %16 = getelementptr inbounds %struct.pnv_ioda_pe, %struct.pnv_ioda_pe* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @WARN_ON(i32 %17)
  %19 = load %struct.pnv_ioda_pe*, %struct.pnv_ioda_pe** %2, align 8
  %20 = getelementptr inbounds %struct.pnv_ioda_pe, %struct.pnv_ioda_pe* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @kfree(i32 %21)
  %23 = load %struct.pnv_ioda_pe*, %struct.pnv_ioda_pe** %2, align 8
  %24 = call i32 @memset(%struct.pnv_ioda_pe* %23, i32 0, i32 24)
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.pnv_phb*, %struct.pnv_phb** %3, align 8
  %27 = getelementptr inbounds %struct.pnv_phb, %struct.pnv_phb* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @clear_bit(i32 %25, i32 %29)
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @memset(%struct.pnv_ioda_pe*, i32, i32) #1

declare dso_local i32 @clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
